# media_organiser

./: .gitignore  AGENTS.md  Dockerfile  cli.py  constants.py  docker-compose-example.yml  docker-compose.yml  entrypoint.sh  io_ops.py  main.py  naming.py  nfo.py  posters.py  pyproject.toml  readme.md  scratch_dryrun_findings.md  sidecars.py
.github/workflows/: ci.yml
coverage/: coverage_history.json
data/import/9 (2009)/: nin-9.nfo
media_organiser/: __main__.py  audio_tools.py  cleanup.py  cli.py  constants.py  duplicates.py  io_ops.py  main.py  musicbrainz_client.py  naming.py  nfo.py  posters.py  sidecars.py  stabilize.py  web.py
media_organiser/templates/: base_upload.html  music_upload.html  upload.html
scripts/: coverage_graph.py
tests/: conftest.py  test_audio_duplicates.py  test_audio_tools.py  test_cleanup_pruning.py  test_cli_integration.py  test_duplicates.py  test_io_ops.py  test_main_entry.py  test_naming.py  test_nfo.py  test_posters.py  test_posters_optional.py  test_sidecars.py  test_web_upload.py
