[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-organiser"
version = "0.1.0"
description = "Offline media organiser with NFO merge-first."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama",
    "coverage",
    "pillow",
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["media_organiser"]