[tool.poetry]
name = "media-organiser"
version = "0.1.0"
description = "Offline media organiser with NFO merge-first."
readme = "readme.md"
authors = []
packages = [{include = "media_organiser"}]

[tool.poetry.scripts]
media-organiser = "media_organiser.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "*"
flask = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"